fix: update collection medias, use default image in update metadata
